// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`okuRadioGroup > can be checked 1`] = `
<div
  data-v-app=""
>
  
  <div
    aria-required="false"
    class="root-class"
    dir="ltr"
    role="radiogroup"
    style="outline-color: none; outline-style: none; outline-width: initial;"
    tabindex="-1"
  >
    
    <button
      aria-checked="true"
      class="item-class"
      data-oku-collection-item=""
      data-state="checked"
      role="radio"
      tabindex="-1"
      type="button"
      value="1"
    >
      <span
        class="indicator-class"
        data-state="checked"
        disabled="false"
        loop="true"
        required="false"
      />
    </button>
    <!---->
    
    
    <button
      aria-checked="false"
      class="item-class"
      data-oku-collection-item=""
      data-state="unchecked"
      role="radio"
      tabindex="-1"
      type="button"
      value="2"
    >
      <!---->
    </button>
    <!---->
    
    
    <button
      aria-checked="false"
      class="item-class"
      data-oku-collection-item=""
      data-state="unchecked"
      role="radio"
      tabindex="-1"
      type="button"
      value="3"
    >
      <!---->
    </button>
    <!---->
    
  </div>
  
</div>
`;

exports[`okuRadioGroup > can be checked 2`] = `
<div
  data-v-app=""
>
  
  <div
    aria-required="false"
    class="root-class"
    dir="ltr"
    role="radiogroup"
    style="outline-color: none; outline-style: none; outline-width: initial;"
    tabindex="0"
  >
    
    <button
      aria-checked="false"
      class="item-class"
      data-oku-collection-item=""
      data-state="unchecked"
      role="radio"
      tabindex="-1"
      type="button"
      value="1"
    >
      <!---->
    </button>
    <!---->
    
    
    <button
      aria-checked="true"
      class="item-class"
      data-oku-collection-item=""
      data-state="checked"
      role="radio"
      tabindex="-1"
      type="button"
      value="2"
    >
      <span
        class="indicator-class"
        data-state="checked"
        disabled="false"
        loop="true"
        required="false"
      />
    </button>
    <!---->
    
    
    <button
      aria-checked="false"
      class="item-class"
      data-oku-collection-item=""
      data-state="unchecked"
      role="radio"
      tabindex="-1"
      type="button"
      value="3"
    >
      <!---->
    </button>
    <!---->
    
  </div>
  
</div>
`;

exports[`okuRadioGroup > can be checked 3`] = `
<div
  data-v-app=""
>
  
  <div
    aria-required="false"
    class="root-class"
    dir="ltr"
    role="radiogroup"
    style="outline-color: none; outline-style: none; outline-width: initial;"
    tabindex="0"
  >
    
    <button
      aria-checked="false"
      class="item-class"
      data-oku-collection-item=""
      data-state="unchecked"
      role="radio"
      tabindex="-1"
      type="button"
      value="1"
    >
      <!---->
    </button>
    <!---->
    
    
    <button
      aria-checked="false"
      class="item-class"
      data-oku-collection-item=""
      data-state="unchecked"
      role="radio"
      tabindex="-1"
      type="button"
      value="2"
    >
      <!---->
    </button>
    <!---->
    
    
    <button
      aria-checked="true"
      class="item-class"
      data-oku-collection-item=""
      data-state="checked"
      role="radio"
      tabindex="-1"
      type="button"
      value="3"
    >
      <span
        class="indicator-class"
        data-state="checked"
        disabled="false"
        loop="true"
        required="false"
      />
    </button>
    <!---->
    
  </div>
  
</div>
`;

exports[`okuRadioGroup > can be checked 4`] = `
<div
  data-v-app=""
>
  
  <div
    aria-required="false"
    class="root-class"
    dir="ltr"
    role="radiogroup"
    style="outline-color: none; outline-style: none; outline-width: initial;"
    tabindex="0"
  >
    
    <button
      aria-checked="true"
      class="item-class"
      data-oku-collection-item=""
      data-state="checked"
      role="radio"
      tabindex="-1"
      type="button"
      value="1"
    >
      <span
        class="indicator-class"
        data-state="checked"
        disabled="false"
        loop="true"
        required="false"
      />
    </button>
    <!---->
    
    
    <button
      aria-checked="false"
      class="item-class"
      data-oku-collection-item=""
      data-state="unchecked"
      role="radio"
      tabindex="-1"
      type="button"
      value="2"
    >
      <!---->
    </button>
    <!---->
    
    
    <button
      aria-checked="false"
      class="item-class"
      data-oku-collection-item=""
      data-state="unchecked"
      role="radio"
      tabindex="-1"
      type="button"
      value="3"
    >
      <!---->
    </button>
    <!---->
    
  </div>
  
</div>
`;

exports[`okuRadioGroup > renders the component correctly with a label 1`] = `
<div
  data-v-app=""
>
  
  <div
    aria-required="false"
    dir="ltr"
    role="radiogroup"
    style="outline-color: none; outline-style: none; outline-width: initial;"
    tabindex="-1"
  >
    Label
  </div>
  
</div>
`;
